<resources>
    <string name="app_name">Remember It</string>
    <string name="start_btn">Start</string>
    <string name="option_btn">Options</string>
    <string name="cards_num_pick">Pick Amount of cards</string>
    <string name="save_btn">Save</string>
    <string name="back_btn">Back</string>
    <string name="play_btn">Play</string>
    <string name="two_players_btn">two players</string>
    <string name="player_turn">Player</string>
    <string name="score">score</string>
    <string name="shop_btn">shop</string>
    <string name="buy_btn">Buy</string>
    <string name="use_btn">Use</string>
    <string name="price_str">Price</string>
    <string name="extra_life">Extra Life</string>
    <string name="double_coins">Double Coins</string>
    <string name="restart_time">Restart Time</string>
    <string name="skip_stage">Skip Stage</string>
    <string name="cancel_shuffle">Cancel Shuffle</string>
    <string name="amount_str">Amount</string>
    <string name="mute_str">mute</string>
    <string name="unmute_str">unmute</string>
    <string name="restart">restart</string>
    <string name="next_stage">next stage</string>
    <string name="shuffle_in">Shuffle In:</string>
    <string name="turns_left">Turns Left:</string>
    <string name="quit">quit</string>
    <string name="new_high_score">New High Score!</string>
    <string name="your_score">Your Score:</string>
    <string name="highest_score">Highest Score:</string>
    <string name="not_enough_money">You don\'t have enough money to buy</string>
    <string name="vs">VS</string>
    <string name="choose_difficult">Choose difficulty</string>
    <string name="choose_world">choose cards type</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="easy_str">Easy</string>
    <string name="medium_str">Medium</string>
    <string name="hard_str">Hard</string>
    <string name="forest_str">Forest</string>
    <string name="food_str">Food</string>
    <string name="city_str">City</string>
    <string name="name_too_long">Player name mus\'t be at up to 9 characters</string>
    <string name="red_str">Red</string>
    <string name="blue_str">Blue</string>
    <string name="yellow_str">Yellow</string>
    <string name="green_str">Green</string>
    <string name="picke_color">Pick color</string>
    <string name="cant_same_color">You can\'t pick the same color</string>
    <string name="desc_extra_life">Gives you another chance after you lose, can be used only after losing.</string>
    <string name="desc_cancel_shuffle">Cancel the cards shuffle for whole game, can be used only during a game.</string>
    <string name="desc_double_coins">Double the coins you recieve for one game, can be used only outside of a game. Double coins will be spent regardless if you win or lose.</string>
    <string name="desc_skip_stage">Allow you to skip to the next stage, can be used only during a game.</string>
    <string name="enter_Str">Enter</string>
    <string name="exit_str">Quit</string>
    <string name="press_card_str">Press the card</string>
    <string name="press_scond_card_str">Press the second card</string>
    <string name="find_second_card_str">Find the second matching card</string>
    <string name="not_the_right_card">This is not the right card, try again</string>
    <string name="clue_str">Here is a clue for you</string>
    <string name="ur_close">You are close, keep going</string>
    <string name="almost_there_str">You are almost there, just a little bit</string>
    <string name="guide_turns_left_str">Pay attention to the number of turns you got</string>
    <string name="look_shuffle_str">Always look at the turns till shuffle</string>
    <string name="press_reset_str">Press the reset button to restart the game</string>
    <string name="ready_to_play_str">You are ready to start playing</string>
    <string name="cant_use_in_game_str">You can\'t use this during a game</string>
    <string name="use_during_game">You can use this item only during a game</string>
    <string name="use_after_lose">You can use this item only after losing a game</string>
    <string name="no_space_inventory_str">You don\'t have enough space in the Inventory</string>
    <string name="open_app">Memory Game - Open</string>
    <string name="not_enough_money_str">You don\'t have enough money to buy this item</string>
    <string name="extra_life_price">Price: 2000</string>
</resources>