<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/play_btn"
        android:background="@drawable/button_shape"
        android:layout_margin="20dp"
        android:id="@+id/play_btn"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/cards_num_pick"
        android:gravity="center" />

    <Spinner
        android:id="@+id/cards_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:popupBackground="@drawable/spinner_background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/mute_str"
        android:background="@drawable/button_shape"
        android:layout_margin="20dp"
        android:id="@+id/mute_btn"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/save_btn"
        android:background="@drawable/button_shape"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:id="@+id/save_btn"/>

    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:text="@string/back_btn"
        android:background="@drawable/button_shape"
        android:id="@+id/back_btn"/>



</LinearLayout>