<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/menu_background"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/play_btn"
        android:background="@drawable/button_shape"
        android:layout_margin="20dp"
        android:id="@+id/play_btn"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/player_1"
            android:id="@+id/player1_et"/>
        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:hint="@string/player_2"
            android:id="@+id/player2_et"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picke_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/picke_color"
            android:textSize="25sp"
            android:textStyle="bold"
            android:gravity="center"
            android:textColor="@color/black"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/player1_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:layout_gravity="center"
            android:popupBackground="@drawable/spinner_background2"
            android:gravity="center" />
        <Spinner
            android:id="@+id/player2_spinner"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginStart="50dp"
            android:layout_gravity="center_horizontal"
            android:popupBackground="@drawable/spinner_background2"
            android:gravity="center"/>

    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/red"
        android:text="@string/cant_same_color"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"
        android:id="@+id/same_color_tv"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/choose_difficult"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/cards_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:popupBackground="@drawable/spinner_background2"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/choose_world"
        android:textColor="@color/black"
        android:textStyle="bold"
        android:textSize="20sp"
        android:gravity="center" />

    <Spinner
        android:id="@+id/world_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:gravity="center"
        android:popupBackground="@drawable/spinner_background2"/>





    <Button
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:text="@string/back_btn"
        android:background="@drawable/button_shape"
        android:id="@+id/back_btn"/>



</LinearLayout>