<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog_layout"



    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:scaleType="fitXY"
        android:layout_gravity="center_horizontal"
        android:background="@color/transparent_full"
        android:id="@+id/dialog_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/transparent_full"
        android:orientation="vertical">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:src="@drawable/gameover_title"/>
      <LinearLayout
          android:layout_width="300dp"
          android:layout_height="wrap_content"
          android:orientation="horizontal"
          android:layout_marginHorizontal="15dp"
          android:layout_gravity="center">
          <ImageView
              android:id="@+id/buyable_iv"
              android:layout_width="0dp"
              android:layout_height="60dp"
              android:layout_weight="1"
              android:layout_marginEnd="5dp"
              android:layout_marginStart="20dp"
              android:src="@drawable/extra_life" />
          <TextView
              android:id="@+id/name_tv"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginHorizontal="5dp"
              android:layout_marginTop="10dp"
              android:breakStrategy="simple"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:text="@string/extra_life"
              android:textSize="15sp"
              android:layout_weight="1.5" />
          <TextView
              android:id="@+id/amount_tv"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="25dp"
              android:layout_marginTop="10dp"
              android:breakStrategy="simple"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:text="x99999"
              android:textSize="15sp"
              android:layout_weight="1" />
          <TextView
              android:id="@+id/price_tv"
              android:layout_width="0dp"
              android:layout_height="wrap_content"
              android:layout_marginEnd="25dp"
              android:layout_marginTop="10dp"
              android:breakStrategy="simple"
              android:textColor="@color/black"
              android:textStyle="bold"
              android:text="@string/extra_life_price"
              android:textSize="15sp"
              android:visibility="gone"
              android:layout_weight="1" />

      </LinearLayout>
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
        android:layout_gravity="center"
            android:text="@string/use_btn"
            android:id="@+id/use_btn"/>
        <Button
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_gravity="center"
            android:visibility="gone"
            android:text="@string/buy_btn"
            android:id="@+id/buy_btn"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"

                android:layout_marginEnd="5dp"
                android:text="@string/restart"
                android:id="@+id/restart_stage"/>
            <Button
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginStart="5dp"
                android:text="@string/quit"
                android:id="@+id/quit_btn"/>

        </LinearLayout>


    </LinearLayout>


</FrameLayout>