<?xml version="1.0" encoding="utf-8"?>
<FrameLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/dialog_layout"



    xmlns:android="http://schemas.android.com/apk/res/android">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="fitXY"
        android:background="@color/transparent_full"
        android:id="@+id/dialog_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:background="@color/transparent_full"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tst"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="40sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="20dp"
            android:id="@+id/score_txt"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="tst"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/max_score"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_high_score"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:textSize="40sp"
            android:visibility="gone"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginTop="5dp"
            android:id="@+id/new_high_score"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_gravity="bottom"
            android:orientation="horizontal"
            android:layout_marginTop="15dp">

            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginEnd="5dp"
                android:text="@string/quit"
                android:id="@+id/quit_stage"/>
            <Button
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:layout_marginStart="5dp"
                android:text="@string/restart"
                android:id="@+id/restart_stage"/>



        </LinearLayout>
        <Button
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:text="@string/next_stage"
            android:id="@+id/next_stage"/>


    </LinearLayout>


</FrameLayout>